[project]
name = "gradio-demo"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "gradio~=5.48.0",
]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[dependency-groups]
dev = [
    "ruff~=0.13.0",
]

[tool.embed]
post_clone = "pip install uv && uv pip install -r pyproject.toml"

[[tool.embed.entrypoints]]
path = "main.py"
